selfhost/test/typechecker/map/error_unfilled_holes.1.out
Error at %FILE_NAME%:1:9
Could not determine type for assignment
  |  val m = { (Option.None_): 123 }
             ^
Type 'Map<<unknown>, Int>' has unfilled holes. Please use an explicit type annotation to denote the type
